--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kvs"
 version = "0.1.0"
-authors = ["Lazy Collin <lazycollinl@gmail.com>"]
+authors = ["LazyCollin <lazycollinl@gmail.com>"]
 description = "A key-value store"
 edition = "2021"
 
@@ -9,7 +9,12 @@ edition = "2021"
 
 [dependencies]
 clap = "2.32.0"
+failure = "0.1.5"
+serde = { version = "1.0.89", features = ["derive"] }
+serde_json = "1.0.39"
 
 [dev-dependencies]
 assert_cmd = "0.11.0"
 predicates = "1.0.0"
+tempfile = "3.0.7"
+walkdir = "2.2.7"
