--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,23 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "2.32.0"
-failure = "0.1.5"
-serde = { version = "1.0.89", features = ["derive"] }
-serde_json = "1.0.39"
+clap = { version = "3.2.15", features = ["cargo"] }
+structopt = "0.3.26"
+failure = "0.1.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+log = "0.4.17"
+env_logger = "0.9.0"
+sled = "0.34.7"
 
 [dev-dependencies]
-assert_cmd = "0.11.0"
-predicates = "1.0.0"
-tempfile = "3.0.7"
-walkdir = "2.2.7"
+assert_cmd = "2.0.4"
+predicates = "2.1.1"
+tempfile = "3.3.0"
+walkdir = "2.3.2"
+criterion = { version = "0.3.6", features = ["html_reports"] }
+rand = "0.8.5"
+
+[[bench]]
+name = "benches"
+harness = false
