--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde_json = "1.0"
 log = "0.4.17"
 env_logger = "0.9.0"
 sled = "0.34.7"
+anyhow = "1.0"
+thiserror = "1"
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
