--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ env_logger = "0.9.0"
 sled = "0.34.7"
 anyhow = "1.0"
 thiserror = "1"
+rayon = "1.5.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
